--- a/package.json
+++ b/package.json
@@ -9,20 +9,23 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@cloudinary/url-gen": "^1.21.0",
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
+    "cloudinary-react-native": "^1.0.1",
     "expo": "~51.0.28",
+    "expo-file-system": "^17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-sqlite": "~14.0.6",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
-    "react-native-screens": "^3.35.0",
+    "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.1.2",
     "styled-components": "^6.1.13"
@@ -30,7 +33,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "metro": "^0.80.8",
-    "metro-config": "^0.81.0"
+    "metro-config": "^0.81.0",
+    "react-native-dotenv": "^3.4.11"
   },
   "private": true
 }
