--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cloudinary/url-gen": "^1.21.0",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -21,8 +22,10 @@
     "expo-file-system": "^17.0.1",
     "expo-image-picker": "~15.0.7",
     "expo-sqlite": "~14.0.6",
+    "firebase": "^11.0.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
